# Connected-components-of-a-graph

./: README.md
fragment of the knowledge base of the subject area Theater/: audience.scs  audience_hall.scs  costume.scs  curtain.scs  ensemble.scs  fake_item.scs  makeup.scs  prompter.scs  props.scs  replica.scs  sound_producer.scs  stage.scs  text_of_the_role.scs  theatrical_action.scs  wardrobe.scs  шаблон
fragment of the knowledge base of the subject area Theater/auxiliary_elements/:  balcony.scs  amphitheatre.scs  authentic_item.scs  baignoire.scs  book.scs  chapter.scs  cheapness.scs  clothes.scs  clue.scs  combination.scs  dialogue.scs  emblem.scs  exchange.scs  face.scs  fragility.scs  key_part.scs  manager.scs  mezzanine.scs  monologue.scs  musical_collective.scs  necessity.scs  place.scs  room.scs  sound.scs  sound_panel.scs  stall.scs  text.scs  thing.scs  usage.scs  whisper.scs
implementation of the task in c++/: CMakeLists.txt  coursework.cpp  tests.scs  utils.cpp  utils.h
implementation of the task in c++/graph/: graph0.scs  graph1.scs  graph2.scs  graph3.scs  graph4.scs
